package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/cloudwego/eino-ext/components/model/ollama"
	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"video_agent/internal/agent"
	"video_agent/internal/mcp"
	"video_agent/internal/memory"
	"video_agent/internal/orchestrator"
	"video_agent/mcp_client"
	pb "video_agent/proto_gen/proto"
)

// XiaovGRPCServer å°VåŠ©æ‰‹gRPCæœåŠ¡å™¨
type XiaovGRPCServer struct {
	pb.UnimplementedXiaovServiceServer
	xiaovGraph    *orchestrator.XiaovGraph
	intentAgent   *agent.IntentRecognitionAgent
	memoryManager *memory.MemoryManager
	sessionStore  map[string]*SessionContext
}

// SessionContext ä¼šè¯ä¸Šä¸‹æ–‡
type SessionContext struct {
	SessionID    string    `json:"session_id"`
	UserID       string    `json:"user_id"`
	CreatedAt    time.Time `json:"created_at"`
	LastActiveAt time.Time `json:"last_active_at"`
}

func main() {
	// åˆ›å»ºgRPCæœåŠ¡å™¨
	server, err := NewXiaovGRPCServer()
	if err != nil {
		log.Fatalf("âŒ åˆå§‹åŒ–æœåŠ¡å™¨å¤±è´¥: %v", err)
	}

	// å¯åŠ¨gRPCæœåŠ¡å™¨
	grpcServer := grpc.NewServer()
	pb.RegisterXiaovServiceServer(grpcServer, server)

	// ç›‘å¬ç«¯å£
	addr := ":50090"
	lis, err := net.Listen("tcp", addr)
	if err != nil {
		log.Fatalf("âŒ ç›‘å¬ç«¯å£å¤±è´¥: %v", err)
	}

	// éé˜»å¡å¯åŠ¨æœåŠ¡å™¨
	go func() {
		fmt.Printf("ğŸš€ gRPCæœåŠ¡å™¨å¯åŠ¨æˆåŠŸï¼\n")
		fmt.Printf("ğŸ“ ç›‘å¬åœ°å€: localhost%s\n", addr)
		fmt.Printf("\nğŸ“š gRPCæœåŠ¡æ–¹æ³•:\n")
		fmt.Printf("  /xiaovpb.XiaovService/Chat\n")
		fmt.Printf("  /xiaovpb.XiaovService/ChatStream\n")
		fmt.Printf("  /xiaovpb.XiaovService/GetSessionHistory\n")
		fmt.Printf("  /xiaovpb.XiaovService/ClearSession\n")
		fmt.Printf("  /xiaovpb.XiaovService/HealthCheck\n")
		fmt.Printf("\nğŸ’¡ æŒ‰ Ctrl+C é€€å‡ºç¨‹åº\n")

		if err := grpcServer.Serve(lis); err != nil {
			log.Fatalf("âŒ gRPCæœåŠ¡å™¨è¿è¡Œå¤±è´¥: %v", err)
		}
	}()

	// ç­‰å¾…ä¸­æ–­ä¿¡å·
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	fmt.Println("\nğŸ›‘ æ­£åœ¨å…³é—­æœåŠ¡å™¨...")
	grpcServer.GracefulStop()
	fmt.Println("âœ… æœåŠ¡å™¨å·²å®‰å…¨é€€å‡º")
}

// NewXiaovGRPCServer åˆ›å»ºå°VåŠ©æ‰‹gRPCæœåŠ¡å™¨
func NewXiaovGRPCServer() (*XiaovGRPCServer, error) {
	ctx := context.Background()

	// åˆå§‹åŒ–Ollamaæ¨¡å‹
	// å¯ç”¨æ¨¡å‹: qwen3:0.6b(æœ€å¿«), deepseek-r1:1.5b(ä¸æ”¯æŒå·¥å…·), deepseek-r1:8b, llama2-chinese, llama3(æ”¯æŒå·¥å…·)
	// ReAct Agentéœ€è¦æ¨¡å‹æ”¯æŒå·¥å…·è°ƒç”¨
	chatModel, err := ollama.NewChatModel(ctx, &ollama.ChatModelConfig{
		BaseURL: "http://localhost:11434",
		Model:   "qwen3:0.6b",    // ä½¿ç”¨0.6bæ¨¡å‹ï¼Œé€Ÿåº¦æœ€å¿«
		Timeout: 6 * time.Minute, // è®¾ç½®6åˆ†é’Ÿè¶…æ—¶ï¼Œç»™æ¨¡å‹è¶³å¤Ÿæ—¶é—´å¤„ç†
	})
	if err != nil {
		return nil, fmt.Errorf("åˆå§‹åŒ–Ollamaæ¨¡å‹å¤±è´¥: %w", err)
	}

	// åˆ›å»ºæ„å›¾è¯†åˆ«Agent
	intentAgent := agent.NewIntentRecognitionAgent(chatModel)

	// åˆ›å»ºè®°å¿†ç®¡ç†å™¨
	memoryManager := memory.NewMemoryManager(
		memory.NewShortTermMemory(1000, 24*time.Hour),
		memory.NewLongTermMemory(nil, nil, nil),
		memory.NewWorkingMemory(100),
	)

	// åˆ›å»ºå›¾ç¼–æ’å™¨ï¼ˆMCPæ¨¡å¼ï¼‰
	// é…ç½®MCP Serverè¿æ¥
	// æ³¨æ„ï¼šMCP Serveréœ€è¦å•ç‹¬å¯åŠ¨ï¼Œå»ºè®®ç›‘å¬ :8081ï¼ˆé¿å…ä¸Gateway :8080å†²çªï¼‰
	// MCP Server SSEç«¯ç‚¹è·¯å¾„æ˜¯ /mcp/sse
	mcpConfig := &mcp.ManagerConfig{
		RemoteConfig: &mcp_client.Config{
			Transport: "sse", // ä½¿ç”¨SSEä¼ è¾“
			Server: mcp_client.ServerConfig{
				URL: "http://localhost:8081/mcp/sse", // MCP Server SSEç«¯ç‚¹ï¼ˆç«¯å£8081ï¼‰
			},
		},
	}

	xiaovGraph, err := orchestrator.NewXiaovGraph(chatModel, intentAgent, memoryManager, mcpConfig)
	if err != nil {
		return nil, fmt.Errorf("åˆå§‹åŒ–å›¾ç¼–æ’å™¨å¤±è´¥: %w", err)
	}

	return &XiaovGRPCServer{
		xiaovGraph:    xiaovGraph,
		intentAgent:   intentAgent,
		memoryManager: memoryManager,
		sessionStore:  make(map[string]*SessionContext),
	}, nil
}

// Chat å®ç°æ™®é€šå¯¹è¯æ¥å£ï¼ˆä½¿ç”¨å›¾ç¼–æ’ï¼‰
func (s *XiaovGRPCServer) Chat(ctx context.Context, req *pb.ChatRequest) (*pb.ChatResponse, error) {
	// å‚æ•°æ ¡éªŒ
	if req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "user_idä¸èƒ½ä¸ºç©º")
	}
	if req.Message == "" {
		return nil, status.Error(codes.InvalidArgument, "messageä¸èƒ½ä¸ºç©º")
	}

	// ç”Ÿæˆæˆ–è·å–ä¼šè¯ID
	sessionID := req.SessionId
	if sessionID == "" {
		sessionID = uuid.New().String()
	}

	// è®°å½•ä¼šè¯ä¸Šä¸‹æ–‡
	s.getOrCreateSession(sessionID, req.UserId)

	// æ„å»ºå›¾ç¼–æ’è¾“å…¥
	input := orchestrator.XiaovInput{
		SessionID: sessionID,
		UserID:    req.UserId,
		Message:   req.Message,
	}

	// åˆ›å»ºæ–°çš„ä¸Šä¸‹æ–‡ï¼Œè®¾ç½®æ›´é•¿çš„è¶…æ—¶æ—¶é—´ï¼ˆ5åˆ†é’Ÿï¼‰
	// ReAct Agent å¯èƒ½éœ€è¦å¤šæ¬¡ LLM è°ƒç”¨ï¼Œéœ€è¦è¶³å¤Ÿæ—¶é—´
	execCtx, cancel := context.WithTimeout(context.Background(), 5*time.Minute)
	defer cancel()

	// æ‰§è¡Œå›¾ç¼–æ’
	startTime := time.Now()
	output, err := s.xiaovGraph.Execute(execCtx, input)
	if err != nil {
		return nil, status.Error(codes.Internal, "å›¾ç¼–æ’æ‰§è¡Œå¤±è´¥: "+err.Error())
	}

	latency := time.Since(startTime)

	return &pb.ChatResponse{
		Code:      0,
		Message:   "success",
		Reply:     output.Reply,
		SessionId: output.SessionID,
		Intent:    output.Intent,
		Timestamp: time.Now().UnixMilli(),
		Metadata: map[string]string{
			"latency_ms": fmt.Sprintf("%d", latency.Milliseconds()),
			"agent":      output.Agent,
			"user_id":    req.UserId,
		},
	}, nil
}

// ChatStream å®ç°æµå¼å¯¹è¯æ¥å£
func (s *XiaovGRPCServer) ChatStream(req *pb.ChatRequest, stream pb.XiaovService_ChatStreamServer) error {
	// å‚æ•°æ ¡éªŒ
	if req.UserId == "" {
		return status.Error(codes.InvalidArgument, "user_idä¸èƒ½ä¸ºç©º")
	}
	if req.Message == "" {
		return status.Error(codes.InvalidArgument, "messageä¸èƒ½ä¸ºç©º")
	}

	sessionID := req.SessionId
	if sessionID == "" {
		sessionID = uuid.New().String()
	}

	// è®°å½•ä¼šè¯ä¸Šä¸‹æ–‡
	s.getOrCreateSession(sessionID, req.UserId)

	// å¯¹äºæµå¼å“åº”ï¼Œå…ˆæ‰§è¡Œæ„å›¾è¯†åˆ«
	intent, err := s.intentAgent.Recognize(stream.Context(), req.Message)
	if err != nil {
		intent = &agent.Intent{Type: agent.IntentGeneralChat, Confidence: 1.0}
	}

	// å‘é€å¼€å§‹æ¶ˆæ¯
	contentMsg := &pb.ChatStreamResponse{
		Payload: &pb.ChatStreamResponse_Content{
			Content: &pb.StreamContent{
				Content:   "æ”¶åˆ°æ‚¨çš„æ¶ˆæ¯ï¼š" + req.Message + "\næ„å›¾è¯†åˆ«ï¼š" + string(intent.Type) + "\næ­£åœ¨å¤„ç†...",
				SessionId: sessionID,
				Intent:    string(intent.Type),
			},
		},
	}
	if err := stream.Send(contentMsg); err != nil {
		return err
	}

	// æ„å»ºè¾“å…¥
	input := orchestrator.XiaovInput{
		SessionID: sessionID,
		UserID:    req.UserId,
		Message:   req.Message,
	}

	// æ ¹æ®æ„å›¾é€‰æ‹©å¤„ç†æ–¹å¼
	switch intent.Type {
	case agent.IntentVideoAnalysis:
		// è§†é¢‘åˆ†æä½¿ç”¨æµå¼å¤„ç†ï¼ˆé¿å…è¶…æ—¶ï¼‰
		return s.handleStreamVideoAnalysis(stream, input, sessionID)
	default:
		// å…¶ä»–æ„å›¾ä½¿ç”¨æ™®é€šå›¾ç¼–æ’
		return s.handleStreamGeneralChat(stream, input, sessionID)
	}
}

// handleStreamVideoAnalysis æµå¼å¤„ç†è§†é¢‘åˆ†æ
func (s *XiaovGRPCServer) handleStreamVideoAnalysis(stream pb.XiaovService_ChatStreamServer, input orchestrator.XiaovInput, sessionID string) error {
	log.Printf("ğŸ“¡ [æµå¼] å¼€å§‹æµå¼åˆ†æï¼ŒSessionID: %s", sessionID)

	// ä½¿ç”¨æµå¼åˆ†ææ–¹æ³•
	streamReader, err := s.xiaovGraph.StreamAnalyzeVideo(stream.Context(), input)
	if err != nil {
		log.Printf("âŒ [æµå¼] StreamAnalyzeVideo è°ƒç”¨å¤±è´¥: %v", err)
		errorMsg := &pb.ChatStreamResponse{
			Payload: &pb.ChatStreamResponse_Error{
				Error: &pb.StreamError{
					Code:      400,
					Message:   err.Error(),
					SessionId: sessionID,
				},
			},
		}
		return stream.Send(errorMsg)
	}
	defer streamReader.Close()

	// æµå¼å‘é€åˆ†æç»“æœ
	var fullContent string
	for {
		msg, err := streamReader.Recv()
		if err != nil {
			if err.Error() == "EOF" {
				log.Printf("ğŸ“¡ [æµå¼] æ”¶åˆ° EOFï¼Œæµç»“æŸ")
			} else {
				log.Printf("âŒ [æµå¼] æ¥æ”¶æ•°æ®é”™è¯¯: %v", err)
			}
			break
		}

		log.Printf("ğŸ“¡ [æµå¼] æ”¶åˆ°æ•°æ®ç‰‡æ®µï¼Œé•¿åº¦: %d", len(msg.Content))
		fullContent += msg.Content

		// å‘é€å†…å®¹ç‰‡æ®µ
		contentMsg := &pb.ChatStreamResponse{
			Payload: &pb.ChatStreamResponse_Content{
				Content: &pb.StreamContent{
					Content:   msg.Content,
					SessionId: sessionID,
					Intent:    "video_analysis",
				},
			},
		}
		if err := stream.Send(contentMsg); err != nil {
			log.Printf("âŒ [æµå¼] å‘é€æ•°æ®å¤±è´¥: %v", err)
			return err
		}
		log.Printf("ğŸ“¡ [æµå¼] æ•°æ®ç‰‡æ®µå·²å‘é€ï¼Œç´¯è®¡é•¿åº¦: %d", len(fullContent))
	}

	// å­˜å‚¨åˆ°è®°å¿†
	assistantMemory := memory.Memory{
		ID:        uuid.New().String(),
		SessionID: sessionID,
		Content:   fullContent,
		Type:      memory.MemoryTypeAssistant,
		CreatedAt: time.Now(),
	}
	s.memoryManager.Store(stream.Context(), assistantMemory)

	// å‘é€å®Œæˆæ ‡è®°
	doneMsg := &pb.ChatStreamResponse{
		Payload: &pb.ChatStreamResponse_Done{
			Done: &pb.StreamDone{
				SessionId: sessionID,
				Intent:    "video_analysis",
				Timestamp: time.Now().UnixMilli(),
			},
		},
	}
	log.Printf("âœ… [æµå¼] æµå¼åˆ†æå®Œæˆï¼Œæ€»é•¿åº¦: %d", len(fullContent))
	return stream.Send(doneMsg)
}

// handleStreamGeneralChat æµå¼å¤„ç†é€šç”¨å¯¹è¯
func (s *XiaovGRPCServer) handleStreamGeneralChat(stream pb.XiaovService_ChatStreamServer, input orchestrator.XiaovInput, sessionID string) error {
	// æ‰§è¡Œå›¾ç¼–æ’è·å–å®Œæ•´å›å¤
	output, err := s.xiaovGraph.Execute(stream.Context(), input)
	if err != nil {
		errorMsg := &pb.ChatStreamResponse{
			Payload: &pb.ChatStreamResponse_Error{
				Error: &pb.StreamError{
					Code:      500,
					Message:   err.Error(),
					SessionId: sessionID,
				},
			},
		}
		return stream.Send(errorMsg)
	}

	// å‘é€å®é™…å›å¤å†…å®¹
	contentMsg := &pb.ChatStreamResponse{
		Payload: &pb.ChatStreamResponse_Content{
			Content: &pb.StreamContent{
				Content:   output.Reply,
				SessionId: sessionID,
				Intent:    output.Intent,
			},
		},
	}
	if err := stream.Send(contentMsg); err != nil {
		return err
	}

	// å‘é€å®Œæˆæ ‡è®°
	doneMsg := &pb.ChatStreamResponse{
		Payload: &pb.ChatStreamResponse_Done{
			Done: &pb.StreamDone{
				SessionId: sessionID,
				Intent:    output.Intent,
				Timestamp: time.Now().UnixMilli(),
			},
		},
	}
	return stream.Send(doneMsg)
}

// GetSessionHistory å®ç°è·å–ä¼šè¯å†å²æ¥å£
func (s *XiaovGRPCServer) GetSessionHistory(ctx context.Context, req *pb.GetSessionHistoryRequest) (*pb.GetSessionHistoryResponse, error) {
	if req.SessionId == "" {
		return nil, status.Error(codes.InvalidArgument, "session_idä¸èƒ½ä¸ºç©º")
	}

	limit := req.Limit
	if limit <= 0 || limit > 100 {
		limit = 20
	}

	history, err := s.memoryManager.GetSessionHistory(ctx, req.SessionId, int(limit))
	if err != nil {
		return nil, status.Error(codes.Internal, "è·å–å†å²è®°å½•å¤±è´¥: "+err.Error())
	}

	// è½¬æ¢ä¸ºprotobufæ¶ˆæ¯
	var messages []*pb.ChatMessage
	for _, mem := range history {
		role := "user"
		if mem.Type == memory.MemoryTypeAssistant {
			role = "assistant"
		}

		userID := ""
		if mem.Metadata != nil {
			if uid, ok := mem.Metadata["user_id"].(string); ok {
				userID = uid
			}
		}

		messages = append(messages, &pb.ChatMessage{
			Id:        mem.ID,
			SessionId: mem.SessionID,
			UserId:    userID,
			Role:      role,
			Content:   mem.Content,
			Timestamp: mem.CreatedAt.UnixMilli(),
		})
	}

	return &pb.GetSessionHistoryResponse{
		Code:     0,
		Message:  "success",
		Messages: messages,
		Total:    int32(len(messages)),
	}, nil
}

// ClearSession å®ç°æ¸…ç©ºä¼šè¯æ¥å£
func (s *XiaovGRPCServer) ClearSession(ctx context.Context, req *pb.ClearSessionRequest) (*pb.ClearSessionResponse, error) {
	if req.SessionId == "" {
		return nil, status.Error(codes.InvalidArgument, "session_idä¸èƒ½ä¸ºç©º")
	}

	err := s.memoryManager.ClearSession(ctx, req.SessionId)
	if err != nil {
		return nil, status.Error(codes.Internal, "æ¸…ç©ºä¼šè¯å¤±è´¥: "+err.Error())
	}

	// æ¸…ç©ºæœ¬åœ°ä¼šè¯ç¼“å­˜
	delete(s.sessionStore, req.SessionId)

	return &pb.ClearSessionResponse{
		Code:    0,
		Message: "ä¼šè¯å·²æ¸…ç©º",
		Cleared: true,
	}, nil
}

// HealthCheck å®ç°å¥åº·æ£€æŸ¥æ¥å£
func (s *XiaovGRPCServer) HealthCheck(ctx context.Context, req *pb.HealthCheckRequest) (*pb.HealthCheckResponse, error) {
	return &pb.HealthCheckResponse{
		Code:      0,
		Status:    "healthy",
		Version:   "1.0.0",
		Timestamp: time.Now().UnixMilli(),
		Features: []string{
			"chat",
			"stream_chat",
			"session_history",
			"intent_recognition",
			"graph_orchestration",
			"branch_routing",
		},
	}, nil
}

// getOrCreateSession è·å–æˆ–åˆ›å»ºä¼šè¯ä¸Šä¸‹æ–‡
func (s *XiaovGRPCServer) getOrCreateSession(sessionID, userID string) *SessionContext {
	if ctx, exists := s.sessionStore[sessionID]; exists {
		return ctx
	}

	ctx := &SessionContext{
		SessionID:    sessionID,
		UserID:       userID,
		CreatedAt:    time.Now(),
		LastActiveAt: time.Now(),
	}
	s.sessionStore[sessionID] = ctx
	return ctx
}
